# bumerge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FUNDING.yml  LICENSE  README.md  bumerge.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
LICENSES/: BSD-3-Clause.txt
tests/: bumerge_test.py
tests/data/: disks.bu  filesystems.bu  root.bu  users.bu
